# PAL

./: CMakeLists.txt
Examples/: 2rules.txt
src/: APS.cpp  Act.cpp  Predicate.cpp  Rule.cpp  main.cpp
src/Include/: APS.h  Act.h  Helpers.h  Predicate.h  Rule.h
src/Parser/: lexer.l  parser.y
